# pylon

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  install.sh  package.json  release-please-config.json  release.sh  tarpaulin-report.html  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
Formula/: pylon.rb
apps/docs/: cloud.mdx  docs.json  installation.mdx  introduction.mdx  quickstart.mdx
apps/web/: package.json  tsconfig.tsbuildinfo
benchmarks/: README.md
benchmarks/k6/: catalog.js  crud.js  mixed.js
benchmarks/search/: Cargo.toml  search.rs
benchmarks/ws-fanout/: package.json  run.ts
crates/action/: Cargo.toml
crates/action/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  apple_jwt.rs  audit.rs  captcha.rs  cookie.rs  device.rs  email.rs  email_templates.rs  jwt.rs  lib.rs  oidc_provider.rs  org.rs  org_sso.rs  password.rs  phone.rs  provider.rs  rate_limit.rs  saml.rs  scim.rs  siwe.rs  stripe.rs  totp.rs  trusted_device.rs  verification.rs  webauthn.rs
crates/cli/: Cargo.toml
crates/cli/embedded/: sdk-index.ts
crates/cli/src/: bun.rs  client_codegen.rs  main.rs  manifest.rs  output.rs  swift_codegen.rs
crates/cli/src/commands/: backup.rs  build.rs  cache.rs  codegen.rs  codegen_client.rs  deploy.rs  dev.rs  doctor.rs  env.rs  explain.rs  init.rs  migrate.rs  mod.rs  plugins.rs  schema.rs  seed.rs  start.rs  test.rs  version.rs
crates/cli/templates/_shared-frontend/lib/: utils.ts
crates/cli/templates/nextjs/: next-env.d.ts  next.config.js  package.json  proxy.ts  tsconfig.json
crates/cli/templates/nextjs/app/: globals.css  layout.tsx  page.tsx  providers.tsx
crates/cli/templates/nextjs/app/dashboard/: layout.tsx  page.tsx
crates/cli/templates/nextjs/app/login/: actions.ts  form.tsx  page.tsx
crates/cli/templates/nextjs/lib/: pylon.ts
crates/cli/templates/react/: package.json  tsconfig.json  vite.config.ts
crates/cli/templates/react/src/: App.tsx  Dashboard.tsx  Login.tsx  index.css  main.tsx
crates/cli/templates/react/src/lib/: pylon.ts
crates/cli/templates/tanstack/: app.config.ts  package.json  tsconfig.json
crates/cli/templates/tanstack/app/: client.tsx  ssr.tsx
crates/cli/templates/tanstack/app/lib/: pylon.ts
crates/cli/templates/tanstack/app/routes/: __root.tsx  dashboard.tsx  index.tsx  login.tsx
crates/core/: Cargo.toml
crates/crdt/: Cargo.toml
crates/crdt/src/: lib.rs
crates/functions/: Cargo.toml
crates/functions/src/: lib.rs  protocol.rs  registry.rs  runner.rs  trace.rs
crates/http/: Cargo.toml
crates/migrate/: Cargo.toml
crates/migrate/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs  registry.rs
crates/plugin/src/builtin/: ai_proxy.rs  api_keys.rs  audit_log.rs  cache.rs  cache_client.rs  cascade.rs  computed.rs  cors.rs  csrf.rs  email.rs  feature_flags.rs  file_storage.rs  jwt.rs  mcp.rs  mod.rs  net_guard.rs  organizations.rs  password_auth.rs  rate_limit.rs  search.rs  session_expiry.rs  slugify.rs  soft_delete.rs  stripe.rs  tenant_scope.rs  timestamps.rs  totp.rs  validation.rs  vector_search.rs  versioning.rs  webhooks.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/query/: Cargo.toml
crates/realtime/: Cargo.toml
crates/realtime/src/: aoi.rs  dyn_shard.rs  lib.rs  matchmaker.rs  persistence.rs  prediction.rs  registry.rs  replay.rs  shard.rs  snapshot.rs  subscriber.rs  tick.rs  transport.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  merge.rs
crates/router/src/routes/: actions.rs  admin_data.rs  ai.rs  auth.rs  auth_admin.rs  crdt.rs  entities.rs  files.rs  functions.rs  infra.rs  links.rs  mod.rs  ops_admin.rs  queries.rs  rooms.rs  search.rs  shards.rs  sync.rs  workflows.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: bench.rs  cache_bench.rs  realtime_bench.rs  sync_bench.rs
crates/runtime/src/: account_backend.rs  api_key_backend.rs  audit_backend.rs  cache_handlers.rs  cache_server.rs  config.rs  cron.rs  datastore.rs  ip_limit.rs  job_store.rs  jobs.rs  lib.rs  log.rs  loro_store.rs  magic_code_backend.rs  metrics.rs  oauth_backend.rs  openapi.rs  org_backend.rs  org_sso_backend.rs  pg_loro_store.rs  presence.rs  pubsub.rs  rate_limit.rs  resp.rs  resp_server.rs  rooms.rs  saml_backend.rs  scheduler.rs  server.rs  session_backend.rs  shard_ws.rs  sse.rs  tls.rs  trusted_device_backend.rs  verification_backend.rs  workflow_store.rs  workflows.rs  ws.rs
crates/runtime/tests/: anonymous_merge.rs  backup_restore.rs  concurrency.rs  e2e_smoke.rs  fuzz.rs  integration.rs  postgres_auth_backends.rs  postgres_backend.rs  sync_protocol.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/staticgen/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: files.rs  lib.rs  pg_datastore.rs  pg_exec.rs  pg_search.rs  pg_tx_store.rs  pool.rs  postgres.rs  search.rs  search_maintenance.rs  search_query.rs  sqlite.rs
crates/storage/tests/: postgres_live.rs
crates/studio_api/: .gitignore  Cargo.toml  build.rs
crates/studio_api/src/: lib.rs
crates/studio_api/web/: index.html  package.json  tsconfig.app.json  vite.config.ts
crates/studio_api/web/src/: App.tsx  index.css
crates/studio_api/web/src/auth/: AuthContext.tsx  SignInDialog.tsx
crates/studio_api/web/src/layout/: StudioLayout.tsx
crates/studio_api/web/src/lib/: pylon.ts
crates/studio_api/web/src/pages/: Entities.tsx  Functions.tsx  Health.tsx  Locked.tsx  Manifest.tsx  Policies.tsx  Routes.tsx  Settings.tsx  Sync.tsx
crates/workers/: Cargo.toml  README.md  wrangler.toml
crates/workers/src/: d1_store.rs  durable_object.rs  handler.rs  lib.rs  noop_adapters.rs
docs/: RUNTIME.md  SYNC.md
tools/: check-cli-vendored.sh
(+1164 files in other folders)
