[workspace]
members = [
  "crates/action",
  "crates/auth",
  "crates/cli",
  "crates/core",
  "crates/crdt",
  "crates/functions",
  "crates/http",
  "crates/migrate",
  "crates/observability",
  "crates/plugin",
  "crates/policy",
  "crates/query",
  "crates/realtime",
  "crates/router",
  "crates/runtime",
  "crates/schema",
  "crates/staticgen",
  "crates/storage",
  "crates/studio_api",
  "crates/sync",
  "crates/workers",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.3.23"  # x-release-please-version
description = "Pylon — realtime backend as a single Rust binary. Schema, policies, server functions, live queries, auth — one process."
homepage = "https://pylonsync.com"
repository = "https://github.com/pylonsync/pylon"
readme = "README.md"
keywords = ["realtime", "database", "sync", "backend", "websocket"]
categories = ["database", "web-programming", "network-programming"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
tiny_http = "0.12"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
# Pure-Rust TLS — no OpenSSL dep, builds cleanly on musl + arm64 cross
# without an OPENSSL_DIR. native-tls broke the binary release pipeline
# on those targets because openssl-sys can't auto-detect cross-compiled
# OpenSSL.
tokio-postgres-rustls = { version = "0.13" }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-native-certs = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tungstenite = "0.24"
# Loro — Rust-native CRDT library used as Pylon's local-first substrate.
# Same library powers Remboard's iOS (loro-swift) and web (loro-crdt npm)
# clients, so all three platforms speak the same wire format.
loro = "1.11"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
argon2 = "0.5"
base64 = "0.22"
ring = "0.17"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Roaring bitmaps for faceted search — Druid, Lucene, Meilisearch all
# rely on the same data structure. Storing per-(entity, facet, value)
# match-sets as bitmaps makes facet counts O(popcount), not O(matches).
roaring = "0.10"
# secp256k1 + keccak256 for SIWE (Sign-In With Ethereum, EIP-4361).
# k256 is the pure-Rust ECDSA on secp256k1 used by every Ethereum
# tool. sha3 provides Keccak-256 (Ethereum's variant, NOT SHA-3).
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha3 = "0.10"
# DEFLATE (raw, no zlib wrapper) for the SAML 2.0 HTTP-Redirect binding —
# OASIS SAML 2.0 Bindings §3.4.4 mandates deflate compression of the
# AuthnRequest XML before base64 encoding into the redirect URL.
flate2 = "1"

[workspace.lints.rust]
unused_crate_dependencies = "warn"
