[package]
name = "pylon-action"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pylon-kernel = { path = "../core", version = "0.3.9" }

[dev-dependencies]
serde_json = { workspace = true }

