[package]
name = "pylon-auth"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
ureq = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
