[package]
name = "pylon-auth"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
ureq = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
# Apple "Sign in with Apple" client_secret JWT signing — ES256 over
# the developer's downloadable .p8 PKCS8 key. ring is already in the
# tree via rustls so this adds no new transitive deps.
base64 = { workspace = true }
ring = { workspace = true }
# SHA-256 used for PKCE code_challenge derivation (RFC 7636 §4.2).
sha2 = { workspace = true }
# SHA-1 ONLY for HIBP Pwned Passwords range check (k-anonymity).
# SHA-1 is broken for collisions but the HIBP corpus uses it as the
# stable index so we have no choice. Not used for any real security.
sha1 = { workspace = true }
