[package]
name = "pylon-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "pylon"
path = "src/main.rs"

[dependencies]
pylon-kernel = { path = "../core" }
pylon-plugin = { path = "../plugin" }
pylon-schema = { path = "../schema" }
pylon-storage = { path = "../storage", features = ["postgres-live"] }
pylon-runtime = { path = "../runtime" }
pylon-staticgen = { path = "../staticgen" }
pylon-migrate = { path = "../migrate" }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
