[package]
name = "pylon-cli"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[[bin]]
name = "pylon"
path = "src/main.rs"

[dependencies]
pylon-kernel = { path = "../core", version = "0.3.16" }
pylon-plugin = { path = "../plugin", version = "0.3.16" }
pylon-schema = { path = "../schema", version = "0.3.16" }
pylon-storage = { path = "../storage", version = "0.3.16", features = ["postgres-live"] }
pylon-runtime = { path = "../runtime", version = "0.3.16" }
pylon-staticgen = { path = "../staticgen", version = "0.3.16" }
pylon-migrate = { path = "../migrate", version = "0.3.16" }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = "0.15"
