[package]
name = "pylon-crdt"
edition.workspace = true
license.workspace = true
description = "Pylon's local-first substrate. Wraps Loro with the doc shape, projection, and sync-protocol pieces Pylon needs."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pylon-kernel = { path = "../core", version = "0.3.16" }
loro = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
