[package]
name = "statecraft-functions"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
statecraft-core = { path = "../core" }
statecraft-http = { path = "../http" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
