[package]
name = "pylon-functions"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
pylon-kernel = { path = "../core", version = "0.3.6" }
pylon-http = { path = "../http", version = "0.3.6" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
