[package]
name = "pylon-plugin"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pylon-kernel = { path = "../core", version = "0.3.4" }
pylon-auth = { path = "../auth", version = "0.3.4" }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
