[package]
name = "pylon-realtime"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[features]
default = []
# Enable MessagePack snapshot encoding. Adds `rmp-serde` dependency.
msgpack = ["dep:rmp-serde"]
# Enable bincode snapshot encoding. Adds `bincode` dependency.
bincode = ["dep:bincode"]

[dependencies]
pylon-kernel = { path = "../core", version = "0.2.5" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rmp-serde = { version = "1.3", optional = true }
bincode = { version = "1.3", optional = true }
