[package]
name = "pylon-router"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
pylon-kernel = { path = "../core", version = "0.2.8" }
pylon-http = { path = "../http", version = "0.2.8" }
pylon-auth = { path = "../auth", version = "0.2.8" }
pylon-policy = { path = "../policy", version = "0.2.8" }
pylon-sync = { path = "../sync", version = "0.2.8" }
pylon-functions = { path = "../functions", version = "0.2.8" }
pylon-realtime = { path = "../realtime", version = "0.2.8" }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
