[package]
name = "pylon-router"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
pylon-kernel = { path = "../core", version = "0.3.16" }
pylon-http = { path = "../http", version = "0.3.16" }
pylon-auth = { path = "../auth", version = "0.3.16" }
pylon-policy = { path = "../policy", version = "0.3.16" }
pylon-sync = { path = "../sync", version = "0.3.16" }
pylon-functions = { path = "../functions", version = "0.3.16" }
pylon-realtime = { path = "../realtime", version = "0.3.16" }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
