[package]
name = "pylon-router"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
pylon-kernel = { path = "../core", version = "0.3.22" }
pylon-http = { path = "../http", version = "0.3.22" }
pylon-auth = { path = "../auth", version = "0.3.22" }
pylon-policy = { path = "../policy", version = "0.3.22" }
pylon-sync = { path = "../sync", version = "0.3.22" }
pylon-functions = { path = "../functions", version = "0.3.22" }
pylon-realtime = { path = "../realtime", version = "0.3.22" }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Used by /api/auth/passkey/* endpoints to base64url-decode
# the credentialId / authenticatorData / clientDataJSON / signature
# bytes the WebAuthn frontend serializes.
base64 = { workspace = true }
# /api/auth/totp/verify hashes backup codes for compare; the
# /backup-codes/regenerate endpoint uses rand to mint them.
sha2 = { workspace = true }
rand = { workspace = true }
