[package]
name = "statecraft-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
statecraft-core = { path = "../core" }
statecraft-http = { path = "../http" }
statecraft-router = { path = "../router" }
statecraft-auth = { path = "../auth" }
statecraft-policy = { path = "../policy" }
statecraft-plugin = { path = "../plugin" }
statecraft-sync = { path = "../sync" }
statecraft-studio-api = { path = "../studio_api" }
statecraft-storage = { path = "../storage" }
statecraft-functions = { path = "../functions" }
statecraft-migrate = { path = "../migrate" }
statecraft-observability = { path = "../observability" }
statecraft-realtime = { path = "../realtime" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = { workspace = true }
tungstenite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = "3"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "sync_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "realtime_bench"
harness = false

