[package]
name = "pylon-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pylon-kernel = { path = "../core" }
pylon-http = { path = "../http" }
pylon-router = { path = "../router" }
pylon-auth = { path = "../auth" }
pylon-policy = { path = "../policy" }
pylon-plugin = { path = "../plugin" }
pylon-sync = { path = "../sync" }
pylon-studio-api = { path = "../studio_api" }
pylon-storage = { path = "../storage" }
pylon-functions = { path = "../functions" }
pylon-migrate = { path = "../migrate" }
pylon-observability = { path = "../observability" }
pylon-realtime = { path = "../realtime" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = { workspace = true }
tungstenite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = "3"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "sync_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "realtime_bench"
harness = false

