[package]
name = "pylon-runtime"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pylon-kernel = { path = "../core", version = "0.2.6" }
pylon-http = { path = "../http", version = "0.2.6" }
pylon-router = { path = "../router", version = "0.2.6" }
pylon-auth = { path = "../auth", version = "0.2.6" }
pylon-policy = { path = "../policy", version = "0.2.6" }
pylon-plugin = { path = "../plugin", version = "0.2.6" }
pylon-sync = { path = "../sync", version = "0.2.6" }
pylon-studio-api = { path = "../studio_api", version = "0.2.6" }
pylon-storage = { path = "../storage", version = "0.2.6" }
pylon-crdt = { path = "../crdt", version = "0.2.6" }
pylon-functions = { path = "../functions", version = "0.2.6" }
pylon-migrate = { path = "../migrate", version = "0.2.6" }
pylon-observability = { path = "../observability", version = "0.2.6" }
pylon-realtime = { path = "../realtime", version = "0.2.6" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = { workspace = true }
tungstenite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = "3"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "sync_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "realtime_bench"
harness = false

