[package]
name = "pylon-storage"
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pylon-kernel = { path = "../core", version = "0.3.20" }
pylon-http = { path = "../http", version = "0.3.20" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
postgres = { workspace = true, optional = true }
tokio-postgres-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
bytes = { version = "1", optional = true }
chrono = { workspace = true, optional = true }
tracing = { workspace = true }
roaring = { workspace = true }
ureq = { workspace = true }

[features]
default = []
postgres-live = ["postgres", "tokio-postgres-rustls", "rustls", "rustls-native-certs", "bytes", "chrono"]

