[package]
name = "pylon-workers"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable to compile the Workers fetch handler (WASM target only).
workers = ["dep:worker", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:futures"]

[dependencies]
pylon-kernel = { path = "../core" }
pylon-http = { path = "../http" }
pylon-router = { path = "../router" }
pylon-auth = { path = "../auth" }
pylon-policy = { path = "../policy" }
pylon-sync = { path = "../sync" }
pylon-realtime = { path = "../realtime" }
serde = { workspace = true }
serde_json = { workspace = true }

# Optional deps — only pulled in when `workers` feature is enabled.
worker = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
futures = { version = "0.3", optional = true }
